alpm-srcinfo/tests/parse_error_snapshots/missing_pkgbase.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "# Immediately start with the pkgname. A pkgbase is required first.\npkgname = test\n\tdesc = \"Test library\"\n\n"
expression: "format!(\"{error}\")"
---
File parsing error:
error: invalid pkgbase section header
  | 
1 | # Immediately start with the pkgname. A pkgbase is required first.
2 | pkgname = test
  | ^
3 |  desc = "Test library"
